# p3d-pool-proxy

./: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.override.example.POOL.yml  docker-compose.override.example.SOLO.yml  docker-compose.yml
.github/workflows/: release_linux.yml
docker/: pool.Dockerfile  ui.Dockerfile
proxy/: Cargo.toml  README.md
proxy/src/: main.rs  message.rs  pool_handler.rs  pool_rpc.rs  solo_handler.rs  solo_rpc.rs  stats_rpc.rs  utils.rs  worker.rs
src/: handler.rs  main.rs  pool_handler.rs  pool_rpc.rs  rpc.rs  solo_handler.rs  solo_rpc.rs  stats_rpc.rs  utils.rs  worker.rs
ui/: README.md  package-lock.json  package.json
ui/src/app/: app.component.html  app.component.ts  app.module.ts
ui/src/app/home/: home.module.ts  home.page.html  home.page.ts
ui/src/app/service/: stats.service.ts  ws-provider.ts
ui/src/environments/: environment.prod.ts  environment.ts
