[package]
name = "p3d-pool-proxy"
version = "0.1.1"
edition = "2021"
authors = ["Seineken"]

[dependencies]
anyhow = "1"
structopt = "0.3.13"
futures = "0.3"
jsonrpsee = { version = "0.20.1", features = ["server", "client", "macros"] }
tokio = { version = "1.16", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1" }
tower-http = { version = "0.4.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
hyper = "0.14.20"
console-subscriber = "0.1.8"
sha3 = "0.10.7"
ansi_term = "0.12.1"

primitive-types = { version = "0.11", default-features = false, features = ["serde"] }
ecies-ed25519 = { version = "0.5" }
rand = "0.7.3"
schnorrkel = { version = "0.10" }
hex = "0.4"
ed25519_to_curve25519 = "0.2"
codec = { package = "parity-scale-codec", version = "3.1", default-features = false, features = ["derive"] }

tiny-bip39 = "1.0.0"
substrate-bip39 = "0.4"

p3d = { version = "0.3.3", git = "https://github.com/3Dpass/p3d", tag = "v0.6.3" }
